# piece-of-code

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
src/: config.py  main.py
src/engines/: __init__.py  base_engine.py  python_base_engine.py
src/engines/js/: js_engine.py
src/engines/js/examples/: 01_animated_wave.html  02_ball_in_hexagon.html  03_flowing_vizualization.html  03_water_ripple.html  04_flowing_viz.html
src/engines/python/: python_engine.py
src/engines/python/examples/: 02_fibonacci.py  03_http_requests.py  03_pandas.py
src/engines/react/: react_engine.py
src/engines/react/examples/: 01_counter.tsx  02_todo_list.tsx  03_tic_tac_toe.tsx  react-globals.d.ts  tsconfig.json
src/engines/streamlit/: streamlit_engine.py
src/engines/streamlit/examples/: 01_yo.py  02_common_elements.py  03_tabular_elements.py  04_misc_elements.py  05_hacker_news.py  06_singapore_weather_dashboard.py
